--- a/top.html
+++ b/top.html
@@ -28,9 +28,50 @@
   </header>
   <section>
     <div class="top">
-      <img src="" alt="">
-      <h1>Commit to the growth for everyone
-      全ての人の成長にコミットする</h1>
+      <img src="top_coachtech.png" alt="top画像" style="width: 100%;">
+    </div>
+
+    <div class="tech_coach">
+      <img src="tech_coach 26.png" alt="テクノロジーとコーチング">
+      <p>
+        株式会社estraはデジタル化が遅れている教育業界に最新のテクノロジーを導入することによって教育のDXを実現します。<br>
+        独自のオペレーションとコーチングを融合した新しい教育の仕組みにより、一人ひとりに合わせた最適な教育を提供します。
+      </p>
+    </div>
+
+    <div class="news">
+      <div>
+        <h2>News</h2>
+        <div>
+          <img src="news1.png" alt="ニュース記事">
+        </div>
+      </div>
+    </div>
+    <div class="service">
+      <div>
+        <h2>Service</h2>
+        <div>
+          <div class="service_cotent">
+            <img src="coachtech_img.png" alt="フリーランス特化型プログラミングスクールcoachtech">
+            <p>COACHTECH(コーチテック)はフリーランス特化型のオンラインコーチングプログラミングスクールです。<br>
+              プログラミング未経験の方でも、「独自の学習ノウハウ」でフリーランスエンジニアを目指すことができます。</p>
+          </div>
+          <div class="service_cotent">
+            <img src="stagee_img.png" alt="教育機関向け業務効率支援ツールstagee">
+            <p>Stageee(ステージー)はコーチングに特化した業務効率化支援ツールです。<br>
+              Web会議、面談予約、チャット、学習計画作成、学習状況の把握、教材管理、指導報告書作成といったコーチングにおいて必要な機能が1つにまとまった業務効率化を支えるSaaS</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div>
+      <div>
+        <h2>Recruit</h2>
+        <div>
+          <img src="recruit_img.png" alt="リクルート">
+          <p>全員がリスクを恐れずにチャレンジし、社員一人一人が活躍できる環境をみんなで作り上げる</p>
+        </div>
+      </div>
     </div>
 
   </section>
@@ -67,7 +108,7 @@
       <a class="footer_privacy" href="privacy.html">プライバシーポリシー</a>
     </div>
   </footer>
-  
-  </body>
-  
-  </html>
+
+</body>
+
+</html>
