--- a/about.html
+++ b/about.html
@@ -35,20 +35,26 @@
     </div>
     <div>
       <h2>私たちが大切にしている3つの事</h2>
-      <div class="about_content1">
+      <div class="about_content">
         <img src="about1.png" alt="失敗を恐れないイメージ">
-        <h3>1.失敗を恐れない</h3>
-        <p>私たちが大切にしている「成長」のためには失敗は必要です。</p>
+        <div>
+          <h3>1.失敗を恐れない</h3>
+          <p>私たちが大切にしている「成長」のためには失敗は必要です。</p>
+        </div>
       </div>
-      <div class="about_content2">
+      <div class="about_content">
         <img src="about2.png" alt="失敗を恐れないイメージ">
-        <h3>2.オープンなコミュニケーション</h3>
-        <p>組織の成長のためなら、時には厳しいことも発言することが重要です。若いメンバーで構成されていることもあり、気軽に誰とでも話せる環境です。</p>
+        <div>
+          <h3>2.オープンなコミュニケーション</h3>
+          <p>組織の成長のためなら、時には厳しいことも発言することが重要です。若いメンバーで構成されていることもあり、気軽に誰とでも話せる環境です。</p>
+        </div>
       </div>
-      <div class="about_content1">
+      <div class="about_content">
         <img src="about3.png" alt="失敗を恐れないイメージ">
-        <h3>3.メンバーの多様性</h3>
-        <p>男女問わず、学生〜社会人まで様々なバックグラウンドを持ったメンバーが働いています。</p>
+        <div>
+          <h3>3.メンバーの多様性</h3>
+          <p>男女問わず、学生〜社会人まで様々なバックグラウンドを持ったメンバーが働いています。</p>
+        </div>
       </div>
     </div>
 
