--- a/service.html
+++ b/service.html
@@ -6,9 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/reset.css">
-  <!-- <link rel="stylesheet" href="styles.css"> -->
   <link rel="stylesheet" href="css/common.css">
-  <link rel="stylesheet" href="css/top.css">
+  <link rel="stylesheet" href="css/service.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap" rel="stylesheet">
@@ -26,52 +25,85 @@
       <li><a href="contact.html">Contact<br><span>お問い合わせ</span></a></li>
     </ul>
   </header>
+
   <section>
     <div class="title">
       <h1>サービス</h1>
       <p>Service</p>
     </div>
-    <div>
-      <div>
-        <img src="service.png" alt="coachtechイメージ">
+    <div class="service_contents">
+      <div class="coachtech_content">
+        <div>
+          <img src="service.png" alt="coachtechイメージ">
+        </div>
+        <p>
+          オンラインプログラミングスクールの中でも挫折率が3%と圧倒的に低い実績を残しています。<br>
+          生徒様に応じた学習カリキュラムは基礎学習と応用学習を用意しており、フリーランスへの道を歩むことができます。
+        </p>
+      </div>
+      <div class="content">
+        <h2>COACHTECH3つの特徴</h2>
+        <p>1.スキルレベルを最短で高めるオーダーメイドカリキュラム<br>
+          2.現役エンジニアの専属コーチが学習サポート<br>
+          3.エラーや疑問点をすぐに解決できる質問チャットサポート</p>
+      </div>
+      <div class="content">
+        <h2>数字で見る「COACHTECH」</h2>
+        <p>
+          ・累計生徒様数200名突破<br>
+          ・挫折率3%<br>
+          ・話題のプログラミングスクール1位
+        </p>
+      </div>
+      <div class="stagee_content">
+        <div>
+          <img src="stagee.png" alt="教育機関向け業務効率化ツールstagee">
+        </div>
+        <h3>Stageee</h3>
+        <p>
+          日本の教育課題は民間企業だからこそ解決できるものがあると信じています。<br>
+          Stageeeはestra創業前からずっと同じサービス名で開発を進め、何度もピボットを繰り返しています。<br>
+          弊社はCOACHTECHで理想の教育モデルを構築し、「Stageee」でそのモデルの普及をすることで日本の教育業界を変革します。<br>
+        </p>
+        <p>Comming soon...</p>
       </div>
     </div>
-  
+
 
   </section>
-<footer>
-  <div class="footer_menu">
+  <footer>
+    <div class="footer_menu">
+      <div>
+        <a href="top.html"><img src="logo2.png" alt="estraの企業ロゴ" class="logo"></a>
+      </div>
+      <div class="footer_list">
+        <ul>
+          <li><a href="about.html">私たちについて</a></li>
+          <li><a href="representative.html">代表挨拶</a></li>
+          <li><a href="Management_Philosophy.html">経営理念</a></li>
+          <li><a href="company.html">会社概要</a></li>
+          <li><a href="member.html">メンバー</a></li>
+        </ul>
+        <ul>
+          <li><a href="news.html">ニュース一覧</a></li>
+        </ul>
+        <ul>
+          <li><a href="service.html">サービス一覧</a></li>
+        </ul>
+        <ul>
+          <li><a href="recruit.html">採用情報</a></li>
+          <li><a href="environment.html">働く環境</a></li>
+          <li><a href="interview.html">インタビュー一覧</a></li>
+        </ul>
+        <ul>
+          <li><a href="contact.html">お問い合わせ</a></li>
+        </ul>
+      </div>
+    </div>
     <div>
-      <a href="top.html"><img src="logo2.png" alt="estraの企業ロゴ" class="logo"></a>
+      <a class="footer_privacy" href="privacy.html">プライバシーポリシー</a>
     </div>
-    <div class="footer_list">
-      <ul>
-        <li><a href="about.html">私たちについて</a></li>
-        <li><a href="representative.html">代表挨拶</a></li>
-        <li><a href="Management_Philosophy.html">経営理念</a></li>
-        <li><a href="company.html">会社概要</a></li>
-        <li><a href="member.html">メンバー</a></li>
-      </ul>
-      <ul>
-        <li><a href="news.html">ニュース一覧</a></li>
-      </ul>
-      <ul>
-        <li><a href="service.html">サービス一覧</a></li>
-      </ul>
-      <ul>
-        <li><a href="recruit.html">採用情報</a></li>
-        <li><a href="environment.html">働く環境</a></li>
-        <li><a href="interview.html">インタビュー一覧</a></li>
-      </ul>
-      <ul>
-        <li><a href="contact.html">お問い合わせ</a></li>
-      </ul>
-    </div>
-  </div>
-  <div>
-    <a class="footer_privacy" href="privacy.html">プライバシーポリシー</a>
-  </div>
-</footer>
+  </footer>
 
 </body>
 
