--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,47 @@
       <p>Contact</p>
     </div>
 
+    <div>
+      <h2>
+        フォームからのお問い合わせ
+      </h2>
+      <p>
+        記入内容の確認後、2~3営業日以内にご連絡させていただきます。
+      </p>
+    </div>
+    <div>
+      <form action="">
+        <table>
+          <tr>
+            <th>名前</th>
+            <td><input type="text" name="name"></td>
+          </tr>
+          <tr>
+            <th>フリガナ</th>
+            <td><input type="text" name=""></td>
+          </tr>
+          <tr>
+            <th>メールアドレス</th>
+            <td><input type="email" name="email"></td>
+          </tr>
+          <tr>
+            <th>郵便番号</th>
+            <td><input type="text" name="postcode"></td>
+          </tr>
+          <tr>
+            <th>問い合わせ内容</th>
+            <td><input type="radio"></td>
+          </tr>
+          <tr>
+            <th></th>
+            <td>
+              <textarea></textarea>
+            </td>
+          </tr>
+        </table>
+      </form>
+    </div>
+
   </section>
   <footer>
     <div class="footer_menu">
@@ -41,8 +82,8 @@
       <div class="footer_list">
         <ul>
           <li><a href="about.html">私たちについて</a></li>
-          <li><a href="representative.html">代表挨拶</a></li>
-          <li><a href="Management_Philosophy.html">経営理念</a></li>
+          <li><a href="greeting.html">代表挨拶</a></li>
+          <li><a href="philosophy.html">経営理念</a></li>
           <li><a href="company.html">会社概要</a></li>
           <li><a href="member.html">メンバー</a></li>
         </ul>
