--- a/environment.html
+++ b/environment.html
@@ -50,8 +50,8 @@
       <div class="footer_list">
         <ul>
           <li><a href="about.html">私たちについて</a></li>
-          <li><a href="representative.html">代表挨拶</a></li>
-          <li><a href="Management_Philosophy.html">経営理念</a></li>
+          <li><a href="greeting.html">代表挨拶</a></li>
+          <li><a href="philosophy.html">経営理念</a></li>
           <li><a href="company.html">会社概要</a></li>
           <li><a href="member.html">メンバー</a></li>
         </ul>
@@ -75,7 +75,7 @@
       <a class="footer_privacy" href="privacy.html">プライバシーポリシー</a>
     </div>
   </footer>
-
-</body>
-
-</html>
+  
+  </body>
+  
+  </html>
