--- a/interview.html
+++ b/interview.html
@@ -6,9 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/reset.css">
-  <!-- <link rel="stylesheet" href="styles.css"> -->
   <link rel="stylesheet" href="css/common.css">
-  <link rel="stylesheet" href="css/top.css">
+  <link rel="stylesheet" href="css/interview.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap" rel="stylesheet">
@@ -16,21 +15,64 @@
 </head>
 
 <body>
-<header>
-  <a href="top.html"><img src="logo.png" alt="estraの企業ロゴ" class="logo"></a>
-  <ul>
-    <li><a href="about.html">About<br><span>私たちについて</span></a></li>
-    <li><a href="news.html">News<br><span>ニュース一覧</span></a></li>
-    <li><a href="service.html">Service<br><span>サービスについて</span></a></li>
-    <li><a href="recruit.html">Recruit<br><span>採用情報</span></a></li>
-    <li><a href="contact.html">Contact<br><span>お問い合わせ</span></a></li>
-  </ul>
-</header>
+  <header>
+    <a href="top.html"><img src="logo.png" alt="estraの企業ロゴ" class="logo"></a>
+    <ul>
+      <li><a href="about.html">About<br><span>私たちについて</span></a></li>
+      <li><a href="news.html">News<br><span>ニュース一覧</span></a></li>
+      <li><a href="service.html">Service<br><span>サービスについて</span></a></li>
+      <li><a href="recruit.html">Recruit<br><span>採用情報</span></a></li>
+      <li><a href="contact.html">Contact<br><span>お問い合わせ</span></a></li>
+    </ul>
+  </header>
   <section>
     <div class="title">
       <h1>インタビュー</h1>
       <p>Interview</p>
     </div>
+
+    <main>
+      <a href="interview1.html">
+        <div class="interview_content">
+          <img src="interview1.png" alt="インタビュー">
+          <div>
+            <p>営業戦略部　営業第一チーム<br>山本太郎<br>2020年12月入社</p>
+          </div>
+        </div>
+      </a>
+      <div class="interview_content">
+        <img src="interview2.png" alt="インタビュー">
+        <div>
+          <p>マーケティング部<br>広告運用チーム<br>仲間次郎
+            2020年10月入社</p>
+        </div>
+      </div>
+      <div class="interview_content">
+        <img src="interview3.png" alt="インタビュー">
+        <div>
+          <p>技術開発部　開発チーム<br>小宮吾郎<br>2020年10月入社</p>
+        </div>
+      </div>
+      <div class="interview_content">
+        <img src="interview4.png" alt="インタビュー">
+        <div>
+          <p>営業戦略部　営業第二チーム<br>白石光代<br>2019年11月入社</p>
+        </div>
+      </div>
+      <div class="interview_content">
+        <img src="interview5.png" alt="インタビュー">
+        <div>
+          <p>人事部　広報チーム<br>柿本珠子<br>2019年1月入社</p>
+        </div>
+      </div>
+      <div class="interview_content">
+        <img src="interview6.png" alt="インタビュー">
+        <div>
+          <p>営業戦略部　営業第三チーム<br>山口太一<br>2021年4月入社</p>
+        </div>
+      </div>
+    </main>
+
 
 
   </section>
@@ -42,8 +84,8 @@
       <div class="footer_list">
         <ul>
           <li><a href="about.html">私たちについて</a></li>
-          <li><a href="representative.html">代表挨拶</a></li>
-          <li><a href="Management_Philosophy.html">経営理念</a></li>
+          <li><a href="greeting.html">代表挨拶</a></li>
+          <li><a href="philosophy.html">経営理念</a></li>
           <li><a href="company.html">会社概要</a></li>
           <li><a href="member.html">メンバー</a></li>
         </ul>
@@ -67,7 +109,7 @@
       <a class="footer_privacy" href="privacy.html">プライバシーポリシー</a>
     </div>
   </footer>
-  
-  </body>
-  
-  </html>
+
+</body>
+
+</html>
