--- a/interview1.html
+++ b/interview1.html
@@ -6,9 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/reset.css">
-  <!-- <link rel="stylesheet" href="styles.css"> -->
   <link rel="stylesheet" href="css/common.css">
-  <link rel="stylesheet" href="css/top.css">
+  <link rel="stylesheet" href="css/interview1.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap" rel="stylesheet">
@@ -27,11 +26,20 @@
     </ul>
   </header>
   <section>
-    <div class="top">
-      <img src="" alt="">
-      <h1>Commit to the growth for everyone
-        全ての人の成長にコミットする</h1>
-    </div>
+      <div class="title">
+        <h1>インタビュー</h1>
+        <p>Interview</p>
+      </div>
+
+      <div class="interview1">
+        <h2>営業戦略部　営業第一チーム<br>山本太郎<br>2020年12月入社</h2>
+        <div>
+          <p>働きやすい環境を全力で作る</p>
+          <img src="interview1.png" alt="山本太郎">
+        </div>
+      </div>
+
+  
 
   </section>
   <footer>
@@ -42,8 +50,8 @@
       <div class="footer_list">
         <ul>
           <li><a href="about.html">私たちについて</a></li>
-          <li><a href="representative.html">代表挨拶</a></li>
-          <li><a href="Management_Philosophy.html">経営理念</a></li>
+          <li><a href="greeting.html">代表挨拶</a></li>
+          <li><a href="philosophy.html">経営理念</a></li>
           <li><a href="company.html">会社概要</a></li>
           <li><a href="member.html">メンバー</a></li>
         </ul>
