--- a/philosophy.html
+++ b/philosophy.html
@@ -6,9 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/reset.css">
-  <!-- <link rel="stylesheet" href="styles.css"> -->
   <link rel="stylesheet" href="css/common.css">
-  <link rel="stylesheet" href="css/top.css">
+  <link rel="stylesheet" href="css/philosophy.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap" rel="stylesheet">
@@ -26,11 +25,51 @@
     <li><a href="contact.html">Contact<br><span>お問い合わせ</span></a></li>
   </ul>
 </header>
+
   <section>
     <div class="title">
       <h1>経営理念</h1>
     </div>
  
+    <div class="philosophy_content">
+      <div>
+        <h2>Mission</h2>
+      </div>
+      <div>
+        <p>全ての人の成長にコミットする</p>
+      </div>
+    </div>
+
+    <div class="philosophy_content">
+      <div>
+        <h2>Vision</h2>
+      </div>
+      <div>
+        <p>教育業界を変革する　-Transform the education industry-</p>
+      </div>
+    </div>
+
+    <div class="philosophy_content">
+      <div>
+        <h2>Value</h2>
+      </div>
+      <div>
+        <p>限界を決めるな　-No limits-
+        <br>思いっきり楽しめ　-Play hard-
+        <br>プロフェッショナルであれ　-Be professional-</p>
+      </div>
+    </div>
+
+    <div class="philosophy_content">
+      <div>
+        <h2>企業名由来</h2>
+      </div>
+      <div>
+        <p>世界的に遅れを取っている日本の教育業界に新たな教育戦略を取り入れ、教育業界を変革するという想いが込められている。
+        <br>-Education×Strategy
+        -</p>
+      </div>
+    </div>
   </section>
 <footer>
   <div class="footer_menu">
@@ -40,8 +79,8 @@
     <div class="footer_list">
       <ul>
         <li><a href="about.html">私たちについて</a></li>
-        <li><a href="representative.html">代表挨拶</a></li>
-        <li><a href="Management_Philosophy.html">経営理念</a></li>
+        <li><a href="greeting.html">代表挨拶</a></li>
+        <li><a href="philosophy.html">経営理念</a></li>
         <li><a href="company.html">会社概要</a></li>
         <li><a href="member.html">メンバー</a></li>
       </ul>
