--- a/recruit.html
+++ b/recruit.html
@@ -6,9 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/reset.css">
-  <!-- <link rel="stylesheet" href="styles.css"> -->
   <link rel="stylesheet" href="css/common.css">
-  <link rel="stylesheet" href="css/top.css">
+  <link rel="stylesheet" href="css/recruit.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap" rel="stylesheet">
@@ -16,22 +15,152 @@
 </head>
 
 <body>
-<header>
-  <a href="top.html"><img src="logo.png" alt="estraの企業ロゴ" class="logo"></a>
-  <ul>
-    <li><a href="about.html">About<br><span>私たちについて</span></a></li>
-    <li><a href="news.html">News<br><span>ニュース一覧</span></a></li>
-    <li><a href="service.html">Service<br><span>サービスについて</span></a></li>
-    <li><a href="recruit.html">Recruit<br><span>採用情報</span></a></li>
-    <li><a href="contact.html">Contact<br><span>お問い合わせ</span></a></li>
-  </ul>
-</header>
+  <header>
+    <a href="top.html"><img src="logo.png" alt="estraの企業ロゴ" class="logo"></a>
+    <ul>
+      <li><a href="about.html">About<br><span>私たちについて</span></a></li>
+      <li><a href="news.html">News<br><span>ニュース一覧</span></a></li>
+      <li><a href="service.html">Service<br><span>サービスについて</span></a></li>
+      <li><a href="recruit.html">Recruit<br><span>採用情報</span></a></li>
+      <li><a href="contact.html">Contact<br><span>お問い合わせ</span></a></li>
+    </ul>
+  </header>
   <section>
     <div class="title">
       <h1>採用情報</h1>
       <p>RECRUIT</p>
     </div>
-  
+
+    <div>
+      <h2>日本の教育を変革する最前線で活躍する人材に</h2>
+    </div>
+    <div>
+      <div class="recruit_content">
+        <img src="hamu.png" alt="新卒採用" style="height: 250px;">
+        <div>
+          <h3>成長したいを叶える会社に</h3>
+          <p>
+            社会人のファーストキャリア、自分のなりたい姿を実現して最大限成長できる会社を選んでほしい。estraには様々な挑戦をして欲しいという思いがあるからこそありとあらゆるチャンスがあります。このチャンスをその手で掴み取り、圧倒的なスピードで成長して、なりたい姿を実現して欲しい。
+          </p>
+        </div>
+      </div>
+      <div class="recruit_content">
+        <img src="lion.png" alt="中途採用" style="height: 250px;">
+        <div>
+          <h3>事業成長のコア人材に</h3>
+          <p>
+            私たちは事業成長をさせるのは人だと信じています。一人ひとりの成長に真摯に向き合い、それぞれが描いた「なりたい姿」を実現する会社を創り上げてきました。だからこそ、estraには様々なプロフェッショナルが集い、活躍するのです。
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <h2>求める人材</h2>
+    </div>
+
+    <div class="occupation">
+      <h3>Director</h3>
+      <div>
+        <h4>仕事内容</h4>
+        <p>
+          クライアントの課題を解決するためにディレクションを行い、要件定義、設計のフェーズから参加していただきます。<br>制作フェーズではチームを率いてプロジェクトマネジメントを行います。<br>設計通りに形にするだけでなく、クライアントに提案をしていきます。
+        </p>
+      </div>
+      <div>
+        <h4>応募資格</h4>
+        <p>
+          ITの基礎知識<br>コミュニケーションスキル<br>Webサービスに教務がある方
+        </p>
+      </div>
+      <div>
+        <h4>給与</h4>
+        <p>
+          年俸300~500万円(業績に応じる)
+        </p>
+      </div>
+      <div>
+        <h4>勤務時間</h4>
+        <p>9:00~18:00(休憩1時間)</p>
+      </div>
+      <div>
+        <h4>福利厚生</h4>
+        <p>社会保険完備</p>
+      </div>
+      <div>
+        <h4>応募方法</h4>
+        <p>履歴書・職務経歴書を送付の上、お問い合わせフォームより応募してください。</p>
+      </div> 　
+    </div>
+
+    <div class="occupation">
+      <h3>Designer</h3>
+      <div>
+        <h4>仕事内容</h4>
+        <p>
+          クライアントの要望に沿ったUI/UXデザインを行います。<br>ロゴの作成からバナーの作成、Webサイト、Webアプリのデザインなど業務は多岐に渡ります。<br> 数字を見ながらマーケティング部と共に分析を行い、最適なデザインを作成していただきます。
+        </p>
+      </div>
+      <div>
+        <h4>応募資格</h4>
+        <p>
+          adobe関連技術<br>コミュニケーションスキル<br>UI/UXデザインの知見
+        </p>
+      </div>
+      <div>
+        <h4>給与</h4>
+        <p>
+        年俸300~500万円(業績に応じる)
+        </p>
+      </div>
+      <div>
+        <h4>勤務時間</h4>
+        <p>9:00~18:00(休憩1時間)</p>
+      </div>
+      <div>
+        <h4>福利厚生</h4>
+        <p>社会保険完備</p>
+      </div>
+      <div>
+        <h4>応募方法</h4>
+        <p>履歴書・職務経歴書を送付の上、お問い合わせフォームより応募してください。</p>
+      </div> 　
+    </div>
+
+    <div class="occupation">
+      <h3>Engineer</h3>
+      <div>
+        <h4>仕事内容</h4>
+        <p>
+          要件定義書を元にWeb関連サービスの作成を主に行う。<br>設計段階からディレクターと共に開発をすり合わせし、サービスを形にする。
+        </p>
+      </div>
+      <div>
+        <h4>応募資格</h4>
+        <p>
+        PHP実務歴15年<br>コミュニケーションスキル<br>システム設計
+        </p>
+      </div>
+      <div>
+        <h4>給与</h4>
+        <p>
+          年俸300~500万円(業績に応じる)
+        </p>
+      </div>
+      <div>
+        <h4>勤務時間</h4>
+        <p>9:00~18:00(休憩1時間)</p>
+      </div>
+      <div>
+        <h4>福利厚生</h4>
+        <p>社会保険完備</p>
+      </div>
+      <div>
+        <h4>応募方法</h4>
+        <p>履歴書・職務経歴書を送付の上、お問い合わせフォームより応募してください。</p>
+      </div> 　
+    </div>
+
 
   </section>
   <footer>
@@ -42,8 +171,8 @@
       <div class="footer_list">
         <ul>
           <li><a href="about.html">私たちについて</a></li>
-          <li><a href="representative.html">代表挨拶</a></li>
-          <li><a href="Management_Philosophy.html">経営理念</a></li>
+          <li><a href="greeting.html">代表挨拶</a></li>
+          <li><a href="philosophy.html">経営理念</a></li>
           <li><a href="company.html">会社概要</a></li>
           <li><a href="member.html">メンバー</a></li>
         </ul>
@@ -67,7 +196,7 @@
       <a class="footer_privacy" href="privacy.html">プライバシーポリシー</a>
     </div>
   </footer>
-  
-  </body>
-  
-  </html>
+
+</body>
+
+</html>
