--- a/top.html
+++ b/top.html
@@ -43,32 +43,35 @@
       <div>
         <h2>News</h2>
         <div>
-          <img src="news1.png" alt="ニュース記事">
+          <a href="news1.html"><img src="news1.png" alt="ニュース記事"></a>
         </div>
       </div>
     </div>
+
     <div class="service">
-      <div>
+      <!-- <div> -->
         <h2>Service</h2>
-        <div>
-          <div class="service_cotent">
+        <div class="service_2">
+          <!-- <div class="service_cotent">
             <img src="coachtech_img.png" alt="フリーランス特化型プログラミングスクールcoachtech">
             <p>COACHTECH(コーチテック)はフリーランス特化型のオンラインコーチングプログラミングスクールです。<br>
               プログラミング未経験の方でも、「独自の学習ノウハウ」でフリーランスエンジニアを目指すことができます。</p>
-          </div>
-          <div class="service_cotent">
+          </div> -->
+          <a href="service.html"><img src="coachtech-img1_2.png" alt="フリーランス特化型プログラミングスクールcoachtech"></a>
+          <!-- <div class="service_cotent">
             <img src="stagee_img.png" alt="教育機関向け業務効率支援ツールstagee">
             <p>Stageee(ステージー)はコーチングに特化した業務効率化支援ツールです。<br>
               Web会議、面談予約、チャット、学習計画作成、学習状況の把握、教材管理、指導報告書作成といったコーチングにおいて必要な機能が1つにまとまった業務効率化を支えるSaaS</p>
-          </div>
+          </div> -->
+          <a href="service.html"><img src="group_33.png" alt="教育機関向け業務効率支援ツールstagee"></a>
         </div>
       </div>
-    </div>
-    <div>
+    <!-- </div> -->
+    <div class="reqruit">
       <div>
         <h2>Recruit</h2>
         <div>
-          <img src="recruit_img.png" alt="リクルート">
+          <a href="recruit.html"><img src="recruit_img.png" alt="リクルート"></a>
           <p>全員がリスクを恐れずにチャレンジし、社員一人一人が活躍できる環境をみんなで作り上げる</p>
         </div>
       </div>
@@ -83,8 +86,8 @@
       <div class="footer_list">
         <ul>
           <li><a href="about.html">私たちについて</a></li>
-          <li><a href="representative.html">代表挨拶</a></li>
-          <li><a href="Management_Philosophy.html">経営理念</a></li>
+          <li><a href="greeting.html">代表挨拶</a></li>
+          <li><a href="philosophy.html">経営理念</a></li>
           <li><a href="company.html">会社概要</a></li>
           <li><a href="member.html">メンバー</a></li>
         </ul>
