--- a/interview.html
+++ b/interview.html
@@ -15,8 +15,10 @@
 </head>
 
 <body>
-  <header>
-    <a href="top.html"><img src="logo.png" alt="estraの企業ロゴ" class="logo"></a>
+  
+<header>
+  <a href="top.html"><img src="logo.png" alt="estraの企業ロゴ" class="logo"></a>
+  <nav class="header-nav">
     <ul>
       <li><a href="about.html">About<br><span>私たちについて</span></a></li>
       <li><a href="news.html">News<br><span>ニュース一覧</span></a></li>
@@ -24,7 +26,31 @@
       <li><a href="recruit.html">Recruit<br><span>採用情報</span></a></li>
       <li><a href="contact.html">Contact<br><span>お問い合わせ</span></a></li>
     </ul>
-  </header>
+  </nav>
+
+  <div class="menu" id="menu">
+    <span class="menu-line-top"></span>
+    <span class="menu-line-middle"></span>
+    <span class="menu-line-bottom"></span>
+  </div>
+  <nav class="drawer-nav" id="drawer-nav">
+    <ul class="drawer-nav-list">
+      <li class="drawer-nav-item"><a href="about.html">私たちについて</a></li>
+      <li class="drawer-nav-item"><a href="greeting.html">代表挨拶</a></li>
+      <li class="drawer-nav-item"><a href="philosophy.html">経営理念</a></li>
+      <li class="drawer-nav-item"><a href="company.html">会社概要</a></li>
+      <li class="drawer-nav-item"><a href="member.html">メンバー</a></li>
+      <li class="drawer-nav-item"><a href="news.html">ニュース一覧</a></li>
+      <li class="drawer-nav-item"><a href="service.html">サービスについて</a></li>
+      <li class="drawer-nav-item"><a href="recruit.html">採用情報</a></li>
+      <li class="drawer-nav-item"><a href="environment.html">働く環境</a></li>
+      <li class="drawer-nav-item"><a href="interview.html">インタビュー一覧</a></li>
+      <li class="drawer-nav-item"><a href="contact.html">お問い合わせ</a></li>
+      <li class="drawer-nav-item"><a href="privacy.html">プライバシーポリシー</a></li>
+    </ul>
+  </nav>
+
+</header>
   <section>
     <div class="title">
       <h1>インタビュー</h1>
@@ -36,39 +62,39 @@
         <div class="interview_content">
           <img src="interview1.png" alt="インタビュー">
           <div>
-            <p>営業戦略部　営業第一チーム<br>山本太郎<br>2020年12月入社</p>
+            <p>営業戦略部<br>営業第一チーム<br>山本太郎<br>2020年12月入社</p>
           </div>
         </div>
       </a>
       <div class="interview_content">
         <img src="interview2.png" alt="インタビュー">
         <div>
-          <p>マーケティング部<br>広告運用チーム<br>仲間次郎
+          <p>マーケティング部<br>広告運用チーム<br>仲間次郎<br>
             2020年10月入社</p>
         </div>
       </div>
       <div class="interview_content">
         <img src="interview3.png" alt="インタビュー">
         <div>
-          <p>技術開発部　開発チーム<br>小宮吾郎<br>2020年10月入社</p>
+          <p>技術開発部<br>開発チーム<br>小宮吾郎<br>2020年10月入社</p>
         </div>
       </div>
       <div class="interview_content">
         <img src="interview4.png" alt="インタビュー">
         <div>
-          <p>営業戦略部　営業第二チーム<br>白石光代<br>2019年11月入社</p>
+          <p>営業戦略部<br>営業第二チーム<br>白石光代<br>2019年11月入社</p>
         </div>
       </div>
       <div class="interview_content">
         <img src="interview5.png" alt="インタビュー">
         <div>
-          <p>人事部　広報チーム<br>柿本珠子<br>2019年1月入社</p>
+          <p>人事部<br>広報チーム<br>柿本珠子<br>2019年1月入社</p>
         </div>
       </div>
       <div class="interview_content">
         <img src="interview6.png" alt="インタビュー">
         <div>
-          <p>営業戦略部　営業第三チーム<br>山口太一<br>2021年4月入社</p>
+          <p>営業戦略部<br>営業第三チーム<br>山口太一<br>2021年4月入社</p>
         </div>
       </div>
     </main>
@@ -109,7 +135,7 @@
       <a class="footer_privacy" href="privacy.html">プライバシーポリシー</a>
     </div>
   </footer>
-
+<script src="js/main.js"></script>
 </body>
 
 </html>
