--- a/philosophy.html
+++ b/philosophy.html
@@ -17,13 +17,38 @@
 <body>
 <header>
   <a href="top.html"><img src="logo.png" alt="estraの企業ロゴ" class="logo"></a>
-  <ul>
-    <li><a href="about.html">About<br><span>私たちについて</span></a></li>
-    <li><a href="news.html">News<br><span>ニュース一覧</span></a></li>
-    <li><a href="service.html">Service<br><span>サービスについて</span></a></li>
-    <li><a href="recruit.html">Recruit<br><span>採用情報</span></a></li>
-    <li><a href="contact.html">Contact<br><span>お問い合わせ</span></a></li>
-  </ul>
+  <nav class="header-nav">
+    <ul>
+      <li><a href="about.html">About<br><span>私たちについて</span></a></li>
+      <li><a href="news.html">News<br><span>ニュース一覧</span></a></li>
+      <li><a href="service.html">Service<br><span>サービスについて</span></a></li>
+      <li><a href="recruit.html">Recruit<br><span>採用情報</span></a></li>
+      <li><a href="contact.html">Contact<br><span>お問い合わせ</span></a></li>
+    </ul>
+  </nav>
+
+  <div class="menu" id="menu">
+    <span class="menu-line-top"></span>
+    <span class="menu-line-middle"></span>
+    <span class="menu-line-bottom"></span>
+  </div>
+  <nav class="drawer-nav" id="drawer-nav">
+    <ul class="drawer-nav-list">
+      <li class="drawer-nav-item"><a href="about.html">私たちについて</a></li>
+      <li class="drawer-nav-item"><a href="greeting.html">代表挨拶</a></li>
+      <li class="drawer-nav-item"><a href="philosophy.html">経営理念</a></li>
+      <li class="drawer-nav-item"><a href="company.html">会社概要</a></li>
+      <li class="drawer-nav-item"><a href="member.html">メンバー</a></li>
+      <li class="drawer-nav-item"><a href="news.html">ニュース一覧</a></li>
+      <li class="drawer-nav-item"><a href="service.html">サービスについて</a></li>
+      <li class="drawer-nav-item"><a href="recruit.html">採用情報</a></li>
+      <li class="drawer-nav-item"><a href="environment.html">働く環境</a></li>
+      <li class="drawer-nav-item"><a href="interview.html">インタビュー一覧</a></li>
+      <li class="drawer-nav-item"><a href="contact.html">お問い合わせ</a></li>
+      <li class="drawer-nav-item"><a href="privacy.html">プライバシーポリシー</a></li>
+    </ul>
+  </nav>
+
 </header>
 
   <section>
@@ -104,7 +129,7 @@
     <a class="footer_privacy" href="privacy.html">プライバシーポリシー</a>
   </div>
 </footer>
-
+<script src="js/main.js"></script>
 </body>
 
 </html>
